tests/paczka1/fuzzy1/61731581.err
Error in line 7: 0NvkxLjMk S611 46,3
Error in line 13: Qo7do9rHlD A808 57,7
Error in line 20: S611 A422 62,6
Error in line 21: S611 S611 85,1
Error in line 22: S611 A808 26,2
Error in line 12: ob5gU S611 24,2
Error in line 30: 0NvkxLjMk A422 73,4
Error in line 34: 0NvkxLjMk A353 13,5
